Fixing scrollbar styles again

--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -30,6 +30,19 @@
 }
 
 @media screen and (min-width: 769px) {
+  .featured {
+    &::-webkit-scrollbar {
+      height: 8px;
+      border-radius: 8px;
+      background: map-get(map-get($palette, greyColors), moon);
+    }
+    &::-webkit-scrollbar-thumb {
+      height: 8px;
+      border-radius: 8px;
+      background: map-get(map-get($palette, lightTheme), content);
+    }
+  }
+
   .categories {
     display: flex;
     flex-wrap: wrap;
