--- a/src/assets/styles/pages/profile.scss
+++ b/src/assets/styles/pages/profile.scss
@@ -110,6 +110,17 @@
           margin: 20px 0;
         }
       }
+      &::-webkit-scrollbar {
+        width: 8px;
+        border-radius: 8px;
+        background: map-get(map-get($palette, greyColors), moon);
+      }
+      &::-webkit-scrollbar-thumb {
+        width: 8px;
+        border-radius: 8px;
+        background: map-get(map-get($palette, lightTheme), content);
+        cursor: pointer;
+      }
     }
     &_title-noAuth {
       margin: 50px 25%;
